fix text overflow

--- a/src/app/navigation-bar/navigation-bar.component.scss
+++ b/src/app/navigation-bar/navigation-bar.component.scss
@@ -60,6 +60,7 @@
   .android-app-item {   
     display: list-item;
     color:white;  
+    padding-right: 2%;
     }
 
     .education-apps-title{
